refactor: start to simplify singleton processor